# Ik

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  quality.yml
.hermes/: P10_WORK_LOG.md
.hermes/overnight/: task-queue.md
.hermes/plans/: 2026-07-03_141441-ik-dokumantasyon-devam-plani.md  2026-07-06_200148-wealthy-falcon-hr-product-plan.md  2026-07-07_101642-overnight-codex-full-night-backlog.md  2026-07-10_122125-mvp-first-release-master-development-plan.md  2026-07-13_220600-phase4-employee-master-data-product-first.md  2026-07-17_115102-phase10-mvp-pilot-readiness.md  overnight-codex-control-protocol.md
.hermes/reports/: 2026-07-13-p4a-work-log.md  2026-07-14-p4b-work-log.md  2026-07-14-p4c-work-log.md  2026-07-14-p4d-work-log.md  2026-07-14-p4e-work-log.md  overnight-codex-change-review.md
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: _employee_account_link_support.py  _employee_field_policy_support.py  _employee_profile_change_request_support.py  _employee_profile_support.py  test_api_dependencies.py  test_audit_api.py  test_audit_recorder.py  (+69 more)
docs/: 01-piyasa-arastirmasi.md  04-gereksinim-analizi.md  05-teknoloji-secimi.md  06-sistem-mimarisi.md  07-veritabani-tasarimi.md  15-modul-egitim-gelisim.md  18-modul-raporlama-analitik.md  21-sayfa-akislari-wireframe.md  25-yetkilendirme-rol-yonetimi.md  26-altyapi-ve-deployment.md  31-lansman-ve-gecis-plani.md  README.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.p4c.config.ts  playwright.p4d.config.ts  playwright.p4e.config.ts  tsconfig.json
scripts/: backend_api_smoke.py  p4c_api_smoke.py  p4d_api_smoke.py  p4e_api_smoke.py  seed_demo_data.py  staging_deploy.sh  staging_smoke_test.py
(+592 files in other folders)
