[project]
name = "ik-platform"
version = "0.1.0"
description = "IK Platform HRMS foundation backend scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = "-m 'not postgres'"
markers = [
    "postgres: requires an explicitly configured disposable PostgreSQL integration environment",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
